--- a/Practice Questions/practice folder/index.html
+++ b/Practice Questions/practice folder/index.html
@@ -23,7 +23,8 @@
     </table>
      -->
 
-
+<input type="text" id="cities">
+<button onclick="cityCheck()" >Check</button>
 
 
     <script  src="app.js" ></script>
