--- a/Practice Questions/Javascript for loops/index.html
+++ b/Practice Questions/Javascript for loops/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" id="userinput">
+    <button onclick="game()" >Submit</button>
 
 
     <script src="app.js" ></script>
