--- a/Practice Questions/practice folder/index.html
+++ b/Practice Questions/practice folder/index.html
@@ -22,10 +22,14 @@
         </tr>
     </table>
      -->
-
+<!-- 
 <input type="text" id="cities">
-<button onclick="cityCheck()" >Check</button>
+<button onclick="cityCheck()" >Check</button> -->
 
+
+<input type="text" id="userInput" >
+
+<button onclick="Palindrome()" >Submit</button>
 
     <script  src="app.js" ></script>
 </body>
