--- a/Practice Questions/DOM/index.html
+++ b/Practice Questions/DOM/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- <ul id="list" >
@@ -16,6 +17,20 @@
 
     <button onclick="viewHide()"  id="button">Hide</button> -->
 
+
+    <!-- <span >
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quos natus voluptatum obcaecati aspernatur laboriosam hic illo mollitia pariatur perspiciatis esse dignissimos qui, iusto maxime architecto harum, officiis quam facilis!
+    </span>
+
+    <span id="secondPara" class="hidden">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quos natus voluptatum obcaecati aspernatur laboriosam hic illo mollitia pariatur perspiciatis esse dignissimos qui, iusto maxime architecto harum, officiis quam facilis!
+    </span>
+
+    <button id="button"  onclick="toggle()" >Show More</button> -->
+
+
+
+    
 
     <script src="./app.js" ></script>
 </body>
