--- a/Practice Questions/practice/index.html
+++ b/Practice Questions/practice/index.html
@@ -8,7 +8,32 @@
 </head>
 <body>
 
+<!-- <input id="input" type="text" onfocus="this.style.backgroundColor = 'Yellow'" onblur="this.style.backgroundColor = 'white'">
+<a href="#"  onclick="alert('Hi')" >Click Here</a> -->
+<!-- 
+<p id="para" onclick="start()" >i am unknown</p> -->
+<!-- <img src="./assets/github profile.jpg"  id="img"  width="300px"  class="showing" alt="" onclick="hide()" > -->
 
+
+
+<!-- <div id="division">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis quod quam, facilis consectetur blanditiis fugiat. Omnis pariatur dolor accusantium tempora id exercitationem quibusdam totam soluta animi. Molestiae, sunt sapiente.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis quod quam, facilis consectetur blanditiis fugiat. Omnis pariatur dolor accusantium tempora id exercitationem quibusdam totam soluta animi. Molestiae, sunt sapiente.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis quod quam, facilis consectetur blanditiis fugiat. Omnis pariatur dolor accusantium tempora id exercitationem quibusdam totam soluta animi. Molestiae, sunt sapiente.</p>
+
+
+</div> -->
+
+
+<div id="cal">
+<p>Southern Cal is sunny.</p>
+<p>Northern Cal is rainy.</p>
+<p>Eastern Cal is desert.</p>
+</div>
+<div id="ny">
+<p>Urban NY is crowded.</p>
+<p>Rural NY is sparse.</p>
+</div>
 
 <script src="./app.js" ></script>
     
