--- a/Practice Questions/practice/index.html
+++ b/Practice Questions/practice/index.html
@@ -25,7 +25,7 @@
 </div> -->
 
 
-<div id="cal">
+<!-- <div id="cal">
 <p>Southern Cal is sunny.</p>
 <p>Northern Cal is rainy.</p>
 <p>Eastern Cal is desert.</p>
@@ -33,7 +33,26 @@
 <div id="ny">
 <p>Urban NY is crowded.</p>
 <p>Rural NY is sparse.</p>
-</div>
+</div> -->
+
+ <div class="col-12 col-md-6 col-lg-4 workcard1 p-3 d-flex flex-column gap-2 " id="main" onmouseover="tohide1()"  onmouseleave="show1()">
+    <div class="cardimg">
+      <img class="w-100" width="200px" src="./assets/github profile.jpg" alt="">
+    </div>
+    <div class="cardhead">
+      <h4>Posting jobs is always free</h4>
+    </div>
+  <div class="hide">
+      <div class="cardpara">
+      <p>Generate a job post with AI or create your own and filter talent matches.</p>
+    </div>
+    <div class="cardbutton">
+      <button class="button-8" >Create a job</button>
+    </div>
+  </div>
+  </div>
+
+
 
 <script src="./app.js" ></script>
     
